--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
-Django==5.1.1
+colorama==0.4.6
+Django==4.2.23
+django-bootstrap-v5==1.0.11
 django-bootstrap5==24.3
 Faker==12.0.1
 flake8==7.1.1
@@ -27,4 +29,5 @@ snowballstemmer==2.2.0
 soupsieve==2.6
 sqlparse==0.5.2
 tomli==2.1.0
+tzdata==2025.2
 yapf==0.43.0
