--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 Django==4.2.23
 django-bootstrap-v5==1.0.11
 django-bootstrap5==24.3
+django-debug-toolbar==4.2.0
 Faker==12.0.1
 flake8==7.1.1
 flake8-docstrings==1.7.0
